--- a/client/todo-app/src/Login.css
+++ b/client/todo-app/src/Login.css
@@ -1,5 +1,5 @@
 .login-form {
-  width: 370px;
+  width: 300px;
   margin: 40px auto;
   padding: 28px 24px;
   background: #fff;
@@ -10,6 +10,11 @@
   gap: 18px;
 }
 
+.login-header{
+  color: #007bff;
+  font-size: 22px;
+}
+
 .login-form label {
   font-weight: 500;
   color: #4f8cff;
@@ -18,6 +23,8 @@
 }
 
 .login-form input[type="date"],
+.login-form input[type="email"],
+.login-form input[type="password"],
 .login-form input[type="text"] {
    padding: 10px 12px;
   border: 1px solid #bcd0ee;
@@ -25,6 +32,7 @@
   font-size: 1rem;
   background: #f6faff;
   transition: border 0.2s;
+  height: 10px;
 }
 
 
@@ -62,7 +70,7 @@
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
-  box-shadow: 0 2px 8px rgba(246, 114, 128, 0.08);
+  box-shadow: 0 2px 8px rgba(68, 49, 50, 0.08);
   transition: background 0.2s;
 }
 
